# ProductionMonitor

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/production_monitor/: main.py
src/production_monitor/api/: __init__.py
src/production_monitor/api/product_code/: __init__.py  crud.py  schemas.py  views.py
src/production_monitor/api/shift_task/: __init__.py  crud.py  dependencies.py  schemas.py  views.py
src/production_monitor/db/alembic/: env.py
src/production_monitor/db/alembic/versions/: 2025_05_14_0800-f4d15015df13_shift_task_and_product_code.py  2025_05_14_0804-3fede1f10a25_connection_shift_task_and_product_code.py
src/production_monitor/models/: __init__.py  base.py  product_code.py  production.py  shift_task.py
src/production_monitor/settings/: config.py
src/production_monitor/utils/: case_converter.py  db_helper.py  errors.py  filters.py
tests/: conftest.py  test_product_code.py  test_shift_tasks.py
